--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
     "extends": ["next", "airbnb", "prettier"],
     "rules": {
-        "prefer-const": "error"
+        "prefer-const": "error",
+        "react/no-unescaped-entities": "off",
+        "@next/next/no-page-custom-font": "off"
     }
 }
